--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -216,10 +216,10 @@
                                                     </div>
 
                                                     <div class="product-action-1 show">
-                                                        <button aria-label="Add To Cart" class="action-btn hover-up"
-                                                            onclick="addToCart('<%= products[i]._id %>', '<%= products[i].price %>')">
+                                                        <button aria-label="Add To Cart" class="action-btn hover-up" onclick="addToCart('<%= products[i]._id %>', '<%= products[i].name %>', '<%= products[i].price %>')">
                                                             <i class="fi-rs-shopping-bag-add"></i>
                                                         </button>
+                                                        
                                                     </div>
                                                 </div>
                                             </div>
@@ -384,7 +384,7 @@
                         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
                         <script>
-                            function addToCart(productId, price) {
+                           function addToCart(productId, name, price) {
                                 // Assuming you want to add 1 quantity by default
                                 const quantity = 1;
 
@@ -393,7 +393,7 @@
                                     headers: {
                                         'Content-Type': 'application/json',
                                     },
-                                    body: JSON.stringify({ productId, quantity, price }),
+                                    body: JSON.stringify({ productId, name, quantity, price }),
                                 })
                                     .then(response => {
                                         if (response.redirected) {
