--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -78,13 +78,13 @@
                             <div class="header-action-icon-2">
                                 <a href="/wishList">
                                     <img class="svgInject" alt="Evara" src="/imgs/theme/icons/icon-heart.svg">
-                                    <span class="pro-count blue">4</span>
+                                    <!-- <span class="pro-count blue">4</span> -->
                                 </a>
                             </div>
                             <div class="header-action-icon-2">
                                 <a class="mini-cart-icon" href="/cart">
                                     <img alt="Evara" src="/imgs/theme/icons/icon-cart.svg">
-                                    <span class="pro-count blue">2</span>
+                                    <!-- <span class="pro-count blue">2</span> -->
                                 </a>
                                 <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                     <ul>
@@ -367,13 +367,13 @@
                         <div class="header-action-icon-2">
                             <a href="/wishList">
                                 <img alt="Evara" src="/imgs/theme/icons/icon-heart.svg">
-                                <span class="pro-count white">4</span>
+                                <!-- <span class="pro-count white">4</span> -->
                             </a>
                         </div>
                         <div class="header-action-icon-2">
                             <a class="mini-cart-icon" href="/cart">
                                 <img alt="Evara" src="/imgs/theme/icons/icon-cart.svg">
-                                <span class="pro-count white">2</span>
+                                <!-- <span class="pro-count white">2</span> -->
                             </a>
                             <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                 <ul>
