--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -265,7 +265,7 @@
                                 text: data.message,
 
                             }).then(() => {
-                                window.location.href = '/cart';
+                               location.reload();
                             });
                         } else {
                             // Handle errors
